--- a/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_client_home.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_client_home.xml
@@ -15,7 +15,7 @@
         android:visibility="gone">
 
         <TextView
-            android:id="@+id/addPetTextView"
+            android:id="@+id/addInventoryTextView"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_marginTop="52dp"
@@ -35,7 +35,7 @@
             android:inputType="text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/addPetTextView" />
+            app:layout_constraintTop_toBottomOf="@+id/addInventoryTextView" />
 
         <EditText
             android:id="@+id/petType"
@@ -140,14 +140,14 @@
         android:visibility="visible">
 
         <Button
-            android:id="@+id/addButton"
+            android:id="@+id/adminInventoryAddButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Add pet"
             app:layout_constraintEnd_toEndOf="parent" />
 
         <Button
-            android:id="@+id/clientHomeLogout"
+            android:id="@+id/adminLogoutButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Logout"
@@ -161,7 +161,7 @@
             android:text="Pets view"
             android:textColor="@color/black"
             android:textSize="40dp"
-            app:layout_constraintEnd_toEndOf="@+id/addButton"
+            app:layout_constraintEnd_toEndOf="@+id/adminInventoryAddButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
