--- a/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_admin_inventory.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_admin_inventory.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/adminInventoryCloseOverlayButton"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_constraintEnd_toEndOf="parent"
@@ -31,7 +30,7 @@
             android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/backButton" />
+            app:layout_constraintTop_toBottomOf="@+id/adminCloseOverlayButton" />
 
         <EditText
             android:id="@+id/addInventoryItemName"
@@ -70,7 +69,7 @@
             app:layout_constraintTop_toBottomOf="@+id/addInventoryItemQuantity" />
 
         <Button
-            android:id="@+id/backButton"
+            android:id="@+id/adminCloseOverlayButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Back"
