--- a/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_client_home.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_client_home.xml
@@ -108,7 +108,7 @@
             app:layout_constraintTop_toBottomOf="@+id/petDiagnosis" />
 
         <Button
-            android:id="@+id/backButton"
+            android:id="@+id/adminCloseOverlayButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Back"
