--- a/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_pet_card.xml
+++ b/Frontend/CyDropFrontend/app/src/main/res/layout/fragment_pet_card.xml
@@ -1,57 +1,262 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/rounded_rectangle"
     android:layout_height="wrap_content"
+    android:background="@drawable/rounded_rectangle"
+    android:animateLayoutChanges="true"
     android:layout_marginTop="10dp"
     tools:context=".PetCardFragment">
 
 
-    <TextView
-        android:id="@+id/card_pet_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="15dp"
-        android:textSize="30sp"
-        android:text="petName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/card_pet_collapsed_layout"
+        android:layout_width="match_parent"
+        android:visibility="visible"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/card_pet_type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="15dp"
-        android:textColor="@color/alpha_grey"
-        android:text="petType"
-        android:textSize="30sp"
+        <TextView
+            android:id="@+id/card_pet_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="10dp"
+            android:text="petName"
+            android:textSize="30sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/card_pet_name"
-        app:layout_constraintTop_toBottomOf="@+id/card_pet_name" />
+        <TextView
+            android:id="@+id/card_pet_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="15dp"
+            android:text="petType"
+            android:textColor="@color/alpha_grey"
+            android:textSize="30sp"
 
-    <Button
-        android:id="@+id/card_pet_edit_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:text="Edit"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/card_pet_name" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/card_pet_name"
+            app:layout_constraintTop_toBottomOf="@+id/card_pet_name" />
 
-    <Button
-        android:id="@+id/card_pet_delete_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:backgroundTint="@color/background_red"
-        android:text="Delete"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/card_pet_type" />
+        <Button
+            android:id="@+id/card_pet_edit_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:text="Edit"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/card_pet_name" />
+
+        <Button
+            android:id="@+id/card_pet_delete_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:backgroundTint="@color/background_red"
+            android:text="Delete"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/card_pet_type" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/card_pet_expanded_layout"
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/card_pet_text_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pet name"
+
+            app:layout_constraintTop_toTopOf="@id/card_pet_edit_name_input"
+            app:layout_constraintBottom_toBottomOf="@id/card_pet_edit_name_input"
+            app:layout_constraintEnd_toStartOf="@+id/card_pet_edit_name_input"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+        <TextView
+            android:id="@+id/card_pet_text_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pet type"
+
+            app:layout_constraintTop_toTopOf="@id/card_pet_edit_type_input"
+            app:layout_constraintBottom_toBottomOf="@id/card_pet_edit_type_input"
+            app:layout_constraintEnd_toStartOf="@+id/card_pet_edit_name_input"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+
+        <TextView
+            android:id="@+id/card_pet_text_breed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pet breed"
+
+            app:layout_constraintTop_toTopOf="@id/card_edit_pet_breed"
+            app:layout_constraintBottom_toBottomOf="@id/card_edit_pet_breed"
+            app:layout_constraintEnd_toStartOf="@+id/card_pet_edit_name_input"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/card_pet_text_age"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pet age"
+
+            app:layout_constraintTop_toTopOf="@id/card_pet_edit_age_input"
+            app:layout_constraintBottom_toBottomOf="@id/card_pet_edit_age_input"
+            app:layout_constraintEnd_toStartOf="@+id/card_pet_edit_name_input"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/card_pet_text_gender"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pet gender"
+
+            app:layout_constraintTop_toTopOf="@id/card_pet_edit_gender_input"
+            app:layout_constraintBottom_toBottomOf="@id/card_pet_edit_gender_input"
+            app:layout_constraintEnd_toStartOf="@+id/card_pet_edit_name_input"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/card_pet_text_diagnosis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pet diagnosis"
+
+            app:layout_constraintTop_toTopOf="@id/card_pet_edit_diagnosis_input"
+            app:layout_constraintBottom_toBottomOf="@id/card_pet_edit_diagnosis_input"
+            app:layout_constraintEnd_toStartOf="@+id/card_pet_edit_name_input"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+
+
+        <TextView
+            android:id="@+id/card_edit_text"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="10dp"
+            android:text="Editing pet"
+            android:textSize="30sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/card_pet_edit_type_input"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Pet type"
+            android:inputType="text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.502"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/card_pet_edit_name_input" />
+
+        <EditText
+            android:id="@+id/card_pet_edit_name_input"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:ems="10"
+            android:hint="Pet name"
+            android:inputType="text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.502"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/card_edit_text" />
+
+        <EditText
+            android:id="@+id/card_edit_pet_breed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Pet breed"
+            android:inputType="text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.502"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/card_pet_edit_type_input" />
+
+        <EditText
+            android:id="@+id/card_pet_edit_diagnosis_input"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Pet diagnosis"
+            android:inputType="text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.502"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/card_pet_edit_gender_input" />
+
+        <EditText
+            android:id="@+id/card_pet_edit_gender_input"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Pet gender"
+            android:inputType="text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.502"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/card_pet_edit_age_input" />
+
+        <Button
+            android:id="@+id/card_pet_edit_submit_button"
+            android:layout_width="wrap_content"
+
+            android:layout_marginTop="15dp"
+            android:layout_height="wrap_content"
+            android:text="Save"
+            android:backgroundTint="#4CAF50"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="6dp"
+            app:layout_constraintStart_toEndOf="@+id/card_pet_edit_cancel_button"
+            app:layout_constraintTop_toBottomOf="@+id/card_pet_edit_diagnosis_input" />
+
+        <Button
+            android:id="@+id/card_pet_edit_cancel_button"
+            android:layout_width="wrap_content"
+            android:backgroundTint="@color/background_red"
+            android:layout_height="wrap_content"
+            android:text="Cancel"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/card_pet_edit_submit_button"
+            app:layout_constraintStart_toStartOf="parent"
+
+            android:layout_marginBottom="6dp"
+            app:layout_constraintVertical_bias="0.023" />
+
+        <EditText
+            android:id="@+id/card_pet_edit_age_input"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Pet age"
+            android:inputType="text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.502"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/card_edit_pet_breed" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</FrameLayout>
